2017-09-07  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js: 
	Define genericListener.listeners.focusItem function.
	
2017-09-06  larissa9839  <larissa9839@gmail.com>

	* tryXpath/css/try_xpath_insert.css
	  Change color.

	* tryXpath/scripts/try_xpath_functions.js:
	Define isAttrItem function.
	Fix isNodeItem function. Now this function returns false when
	argument is Attr.
	Define getParentElement function.

	* tryXpath/scripts/try_xpath_content.js:
	Change genericListener.listeners.execute function to return
	itemDetails.

2017-09-05  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_functions.js:
	Define getItemDetails function.

	* tryXpath/scripts/try_xpath_content.js:
	Define resetPrev function.
	Change genericListener.listeners.execute function.

	* tryXpath/scripts/try_xpath_functions.js:
	Change return value of execExpr function.
	Define addClassToItem function.
	Define addClassToItems function.
	Define isElementItem function.
	Define isNodeItem function.
	Define saveItemClass function.
	Define restoreItemClass function.
	Define saveItemClasses function.
	Define restoreItemClasses function.
	
	* test/unit_test/jasmine/spec/spec.js:
	Test className behavior.

	* tryXpath/scripts/try_xpath_content.js:
	Define genericListener.listener.execute()

2017-09-04  larissa9839  <larissa9839@gmail.com>

	* tryXpath/css/try_xpath_insert.css
          Change CSS


